# taurine-project

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE-MIT  README.md  run-clang-format.py
.github/ISSUE_TEMPLATE/: bug_report.md  tracking-issue.md
.github/workflows/: ci-apple-map.yml  ci-arty.yml  ci.yml
apple_map/: README.md  apple_map.c  apple_map.h  tests.c
apple_map/include/: map.h
apple_map/src/: apple_map.c  map.c
apple_map/tests/: tests.c
argparse/: OWNERS  argparse.c
argparse/include/: argparse.h
argparse/src/: argparse.c
arty/: Makefile  README.md  tests.c  unicode.c  unicode.h  utf8.c  utf8.h
arty/include/: macros.h  unicode.h  utf8.h
arty/src/: unicode.c  utf8.c
arty/tests/: tests.c
cesium/: README.md
cmake/: shortcuts.cmake
eboueur/: README.md  eboueur.c  eboueur.h
lunarity/: LICENSE-APACHE  Makefile  README.md  ast.h  cli.c  context-free-grammar.ebnf  lexer.c  lexer_tests.c  parser.h  token.h
lunarity/include/: ast.h  lexer.h  location.h  parser.h  token.h
lunarity/src/: cli.c  lexer.c  lexer.h  location.c  token.c  token.h
lunarity/tests/: lexer_tests.c
tau/: Makefile  compilers.h  misc.h  tau.h  types.h
tau/src/: tau.h  types.h
vec/: tests.c  vec.h
vec/include/: vec.h
vec/src/: vec.h
